data screen running like charm
woops

--- a/main.kv
+++ b/main.kv
@@ -199,12 +199,69 @@ ScreenManager:
                     app.screen_capture("Add_data")
     MDScreen:
         name:"Add_data"
-        md_bg_color:211/255, 211/255, 211/255, 1
+        #md_bg_color:211/255, 211/255, 211/255, 1
         FloatLayout:
+            Deco:
+                md_bg_color:36/255, 146/255, 255/255, 1
+                pos_hint:{"center_x":.5,"center_y":.9}
             MDIconButton:
                 icon:"arrow-left"
                 pos_hint:{"center_x":.1,"center_y":.95}
+            MDChooseChip:
+                pos_hint:{"center_x":.7,"center_y":.9}
+                MDChip:
+                    text: 'Matumizi'
+                    icon: 'credit-card-minus'
+                    color:1,1,1,1
+                    selected_chip_color: .5,.5,1,1
+                    on_release:
+                        app.category_sheet(app.matumizi)
+                MDChip:
+                    text: 'Kipato'
+                    icon: 'credit-card-plus'
+                    color:1,1,1,1
+                    selected_chip_color: .5,.5,1,1
+                    on_release:
+                        app.category_sheet(app.kipato)
+            MDLabel:
+                text:app.amount
+                halign:"center"
+                pos_hint:{"center_x":.8,"center_y":.8}
+                font_size:"30sp"
+                theme_text_color: "Custom"
+                text_color: 1, 1, 1, 1
+            MDLabel:
+                text:app.data_name
+                halign:"center"
+                font_size:"20dp"
+                pos_hint:{"center_x":.251,"center_y":.8}
+                font_style:"Subtitle1"
+                font_name:'components/fonts/Gill Sans.otf'
+            MDIcon:
+                icon:app.data_icon
+                halign:"center"
+                font_size:"40dp"
+                pos_hint:{"center_x":.1,"center_y":.8}
+            MDFloatingActionButton:
+                icon:"check"
+                pos_hint:{"center_x":.87,"center_y":.45}
+                md_bg_color:36/255, 146/255, 255/255, 1
+            Keyboard:
+                pos_hint:{"center_x":.5,"center_y":.2}
 
+
+<Deco@MDCard>:
+    orientation: "vertical"
+    md_bg_color: 1, 1, 1, 1
+    padding: "10dp"
+    #spacing: "5dp"
+    border_radius: 3
+    border_color_a: .5
+    radius: [9]
+    size_hint: None, None
+    size: app.size_x/1, app.size_y/2.5
+    focus_behavior: False
+    ripple_behavior: False
 
 <MoneyCard@MDCard>:
     orientation: "vertical"
@@ -234,3 +291,138 @@ ScreenManager:
     size: app.size_x/2.5, app.size_y/5
     focus_behavior: False
     ripple_behavior: False
+
+<Keyboard@MDCard>:
+    orientation: "vertical"
+    md_bg_color: 1, 1, 1, 1
+    pos_hint:{"center_x":.5,"center_y":.5}
+    padding: "10dp"
+    #spacing: "5dp"
+    border_radius: 3
+    border_color_a: .5
+    radius: [9]
+    size_hint: None, None
+    size: app.size_x/1, app.size_y/2.5
+    focus_behavior: False
+    ripple_behavior: False
+    FloatLayout:
+        MDRaisedButton:
+            text: "7"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.13, 'center_y':.9}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.amount_update("7")
+        MDRaisedButton:
+            text: "8"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.49, 'center_y':.9}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.amount_update("8")
+        MDRaisedButton:
+            text: "9"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.85, 'center_y':.9}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.amount_update("9")
+        MDRaisedButton:
+            text: "4"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.13, 'center_y':.65}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.amount_update("4")
+        MDRaisedButton:
+            text: "5"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.49, 'center_y':.65}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.amount_update("5")
+        MDRaisedButton:
+            text: "6"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.85, 'center_y':.65}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.amount_update("6")
+        MDRaisedButton:
+            text: "1"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.13, 'center_y':.4}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.amount_update("1")
+        MDRaisedButton:
+            text: "2"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.49, 'center_y':.4}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.amount_update("2")
+        MDRaisedButton:
+            text: "3"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.85, 'center_y':.4}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.amount_update("1")
+        MDRaisedButton:
+            text: "000"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.13, 'center_y':.1}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.amount_update("000")
+        MDRaisedButton:
+            text: "0"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.49, 'center_y':.1}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.amount_update("0")
+        MDRaisedButton:
+            text: "X"
+            size_hint: .3, .2
+            elevation:9
+            font_size: "29sp"
+            font_name: "components/fonts/Gill Sans Bold.otf"
+            pos_hint:{'center_x':.85, 'center_y':.1}
+            md_bg_color: 36/255, 146/255, 255/255, 1
+            on_release:
+                app.back_space()
